# InterviewCompanion

./: openai_client.py
InterviewCompanion/: app.py  app_basic.py  app_simple.py  audio_processor.py  config.py  main.py  pyproject.toml
InterviewCompanion/attached_assets/: Pasted-Absolutely-Here-s-a-simple-clean-and-modern-white-themed-interface-for-your-Replit-Interview-Assi-1748556428477.txt  Pasted-Absolutely-You-can-transform-your-Interview-Assistant-s-interface-into-a-modern-visually-appealing-1748561199010.txt  Pasted-Based-on-your-description-and-the-current-environment-here-s-a-focused-troubleshooting-and-action-c-1748557524153.txt  Pasted-Great-feedback-Here-s-how-to-address-your-three-requests-for-the-Interview-Assistant-s-speech-recog-1748565843503.txt  Pasted-Here-s-a-clear-AI-ready-description-for-Ripple-Replit-s-AI-to-generate-and-set-your-site-logo-pl-1748567182093.txt  Pasted-Here-s-a-step-by-step-troubleshooting-and-action-plan-to-address-your-Interview-Assistant-app-issues-1748552468010.txt  Pasted-Objective-Build-a-real-time-interview-assistant-tool-in-Python-that-listens-to-audio-from-the-micro-1748547782065.txt  Pasted-Thank-you-for-the-detailed-update-Here-s-what-s-happening-and-how-you-can-address-it-What-1748555771397.txt  Pasted-To-fix-the-audio-listening-microphone-input-issue-for-your-Replit-based-interview-help-tool-you-n-1748554571152.txt  Pasted-You-already-have-a-strong-structured-plan-for-your-InterviewCompanion-project-Below-is-a-refined--1748547956435.txt  (+4 more)
InterviewCompanion/templates/: index.html  index_basic.html  index_simple.html
(+4 files in other folders)
