[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.82.1",
    "psycopg2-binary>=2.9.10",
    "whisper>=1.1.10",
    "sounddevice>=0.5.2",
    "numpy>=2.2.6",
    "wave>=0.0.2",
]
